# bazel-goland-debug-bug

./: .bazelproject  BUILD.bazel  WORKSPACE  main.go  main_test.go
