load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary", "go_test")

go_library(
	name = "go_default_library",
	srcs = ["main.go"],
	importpath = "test",
)

go_binary(
	name = "main",
	embed = [":go_default_library"],
	importpath = "test",
)

go_test(
	name = "go_default_test",
	srcs = ["main_test.go", "main.go"],
	deps = [
	],
)
